# flashdesk

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  docker_f*up.md  install_script.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
custom_dockerfiles/: Dockerfile  Dockerfile.aistuff  README.md  vnc
extra_scripts/: docker_functions.py
flashdesk/: __init__.py  hooks.py  install.py  modules.txt
flashdesk-frontend/: README.md  package-lock.json  package.json
flashdesk/api/: image_create.py  pod_image.py  rq_stuff.py
flashdesk/api/ai/: process_pdfs.py
flashdesk/api/fileupload/: files.py
flashdesk/api/users/: user.py
flashdesk/docker_utils/: docker_client.py  docker_low_level_client.py
flashdesk/flashdesk/doctype/container_metadata/: container_metadata.js  container_metadata.json  container_metadata.py  test_container_metadata.py
flashdesk/flashdesk/doctype/pod_image/: pod_image.js  pod_image.json  pod_image.py  test_pod_image.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  router.js  socket.js
frontend/src/components/: EventNotifications.vue  FileUpload.vue  Forms.vue  LoginBox.vue  Modal.vue  PDFList.vue  SideNavbar.vue  TarList.vue  UsageGraph.vue  UserDetails.vue  UserDisclaimer.vue
frontend/src/pages/: ActivePodImages.vue  CreatePodImages.vue  DockerHubSearch.vue  Events.vue  Home.vue  Login.vue  Logs.vue  PodImages.vue  RunningPods.vue  SavedImages.vue  Upload.vue
frontend/src/stores/: auth.js  user.js
